--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@ html, body{
 @import './sections/navbar';
 @import './sections/index';
 @import './sections/quienes_somos';
-@import './sections/nuestros_profesionales';
+@import './sections/profesionales';
 @import './sections/sucursales';
 @import './sections/contacto';
 @import './sections/footer';
