--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -295,6 +295,17 @@ text-align: justify;
     transition: 0.3s;
 }
 
+.especialidad{
+    padding: 20px;
+}
+
+.especialidad p{
+    padding-top: 10px;
+}
+
+.especialidad h2{
+    color: #7A7671;
+}
 
 /*------- Sección Servicios -------*/
 
