--- a/css/style.css
+++ b/css/style.css
@@ -492,7 +492,7 @@ main .nuestros_profesionales {
   background-color: #EAF3F2;
   padding-top: 20px;
   padding-bottom: 40px; }
-  main .nuestros_profesionales > h1 {
+  main .nuestros_profesionales h1 {
     padding-left: 20px; }
   main .nuestros_profesionales > img {
     width: 500px;
