--- a/scss/sections/_profesionales.scss
+++ b/scss/sections/_profesionales.scss
@@ -4,7 +4,7 @@ main{
         background-color: #EAF3F2;
         padding-top: 20px;
         padding-bottom: 40px;
-        > h1{
+        h1{
             padding-left: 20px;
         }
         > img{
