--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -264,10 +264,8 @@ text-align: justify;
 .especialidades{
     display: flex;
     flex-direction: column;
-    background-color: white;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 5%;
+    @include estilo_texto(white, #817D76);
+    @extend %formato_seccion;
 }
 
 .especialidad_texto p{
@@ -289,6 +287,13 @@ text-align: justify;
     transform: scale(1,1);
     transition: 0.3s;
 }
+    .especialidades li p{
+        text-align: center;
+        padding-left: 5px;
+        padding-top: 10px;
+        color:  #49B7BF;
+        font-weight: 600;
+    }
 
 .especialidades li img:hover{
     transform: scale(1.1,1.1);
@@ -311,14 +316,12 @@ text-align: justify;
 
 
 .servicios{
-    background-color: #EAF3F2;
+    @include estilo_texto( #EAF3F2, #817D76);
     display: grid;
     grid-template-areas:
     "servicio_texto servicio_texto servicio_texto"
     "servicio_1 servicio_2 servicio_3";
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 5%;
+    @extend %formato_seccion;
 }
 
 .servicio_texto{
@@ -380,10 +383,8 @@ text-align: justify;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: white;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    padding-left: 5%;
+    @include estilo_texto( white, #817D76);
+    @extend %formato_seccion;
 }
 
 .beneficios p{
@@ -466,19 +467,14 @@ text-align: justify;
 
 
 .opiniones{
-    background-color: #EAF3F2;
+    @include estilo_texto( #EAF3F2,  #49B7BF);
     display: grid;
     grid-template-areas:
     "opinion_titulo opinion_paciente ."
     "opinion_texto opinion_paciente .";
-    padding-top: 60px;
-    padding-bottom: 20px;
-    padding-left: 5%;
+    @extend %formato_seccion;
 }
 
-.opiniones p{
-    color: #49B7BF;
-}
 
 .opinion_titulo{
     grid-area: opinion_titulo;
