--- a/css/style.css
+++ b/css/style.css
@@ -498,14 +498,17 @@ main .nuestros_profesionales {
   background-color: #EAF3F2;
   padding-top: 20px;
   padding-bottom: 40px; }
-  main .nuestros_profesionales h1 {
-    padding-left: 20px; }
-  main .nuestros_profesionales > img {
+  main .nuestros_profesionales img {
     width: 500px;
-    padding-top: 45px;
+    padding-top: 35px;
     padding-left: 20px;
     padding-bottom: 20px; }
-  main .nuestros_profesionales > p {
+  main .nuestros_profesionales h1 {
+    padding-left: 20px; }
+  main .nuestros_profesionales h3 {
+    color: #979797;
+    font-size: 1.3rem; }
+  main .nuestros_profesionales p {
     padding-left: 20px;
     padding-bottom: 20px; }
 
