--- a/scss/sections/_profesionales.scss
+++ b/scss/sections/_profesionales.scss
@@ -4,16 +4,20 @@ main{
         background-color: #EAF3F2;
         padding-top: 20px;
         padding-bottom: 40px;
-        h1{
-            padding-left: 20px;
-        }
-        > img{
+        img{
             width: 500px;
-            padding-top:45px;
+            padding-top:35px;
             padding-left: 20px;
             padding-bottom: 20px;
         }
-        > p{
+        h1{
+            padding-left: 20px;
+        }
+        h3{
+            color: #979797;
+            font-size: 1.3rem;
+        }
+        p{
             padding-left: 20px;
             padding-bottom: 20px;
         }
