--- a/scss/sections/_profesionales.scss
+++ b/scss/sections/_profesionales.scss
@@ -13,6 +13,9 @@ main{
         h1{
             padding-left: 20px;
         }
+        h2{
+            padding-bottom: 10px;
+        }
         h3{
             color: #979797;
             font-size: 1.3rem;
