--- a/scss/sections/_quienes_somos.scss
+++ b/scss/sections/_quienes_somos.scss
@@ -1,22 +1,23 @@
 .nuestra_historia{
     background-color: #EAF3F2;
-    }
-    
-    .nuestra_historia h1{
-        padding-top: 30px;
+    h1{
+        padding-top: 40px;
         padding-left: 20px;
-        padding-bottom: 40px;
+        padding-bottom: 10px;
     }
-    
-    .nuestra_historia > p{
+    h2{
+        padding-left: 20px;
+        padding-bottom: 0px;
         padding-top: 20px;
-        padding-left: 20px;
-        padding-right: 20px;
+    }
+    p{
+        padding: 20px;
         text-align: justify;
         margin-bottom: 0px;
     }
-    
-    .nuestra_historia img{
+
+    img{
         width: 515px;
-        padding-left: 20px;
+        padding: 20px;  
     }
+}
