se quitó el style en línea de sucursales.html

--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,18 @@ main .nuestros_profesionales {
   .sucursales .direccion {
     font-weight: 700; }
 
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 500px;
+  width: 600px; }
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 500px;
+  width: 600px; }
+
 .contacto {
   padding-top: 20px;
   padding-bottom: 60px;
