--- a/scss/sections/_sucursales.scss
+++ b/scss/sections/_sucursales.scss
@@ -13,3 +13,15 @@
         font-weight: 700;
     }
 }
+    .mapouter {
+        position: relative;
+        text-align: right;
+        height: 500px;
+        width: 600px;
+    }
+    .gmap_canvas {
+        overflow: hidden;
+        background: none !important;
+        height: 500px;
+        width: 600px;
+      }
